@@ -31,7 +31,8 @@ Until beta2:
 - fixed some functions to be Excel-compatibel (FIND, REPLACE)
 
 new functions added:
- ISEMPTY, CHAR, CODE, VALUE, DOLLAR, CONCATENATE, FIXED, T, TEXT, SUBSTITUTE
+ ISEMPTY, CHAR, CODE, VALUE, DOLLAR, CONCATENATE, FIXED, T, TEXT, SUBSTITUTE,
+ SEARCH
 
 Until beta1:
 ------------
